<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnLayoutExercise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutExercise">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="2dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textSize="34sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="115dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView9"
                                android:layout_width="117dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/kafka_portrait" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:text="Kafka"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView8"
                                android:layout_width="113dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/jingliu_portrait"
                                tools:srcCompat="@drawable/jingliu_portrait" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:text="Jingliu"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="113dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/blackswan_portrait"
                                tools:srcCompat="@drawable/blackswan_portrait" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:text="Black Swan"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView7"
                                android:layout_width="117dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/himeko_portrait"
                                tools:srcCompat="@drawable/himeko_portrait" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:text="Himeko"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:srcCompat="@tools:sample/avatars" />
                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myName"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    app:srcCompat="@drawable/fire"
                    tools:srcCompat="@drawable/fire" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnDisplayToast"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/lightred"
                        android:text="@string/post_like" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#7DBEE8"
                        android:text="@string/post_comment" />

                    <Button
                        android:id="@+id/button8"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/post_share" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:srcCompat="@drawable/sam_splash" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnDisplayToast"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/lightred"
                        android:text="@string/post_like" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#7DBEE8"
                        android:text="@string/post_comment" />

                    <Button
                        android:id="@+id/button8"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/post_share" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>